layout bug

--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -2,6 +2,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 .padding-top-2x {
@@ -38,11 +39,6 @@
 
 .div-left {
     float: left;
-}
-
-.center {
-    margin: auto;
-    width: 60%;
 }
 
 .pic {
